@@ -145,6 +145,26 @@ class ZMThemes extends ZMObject {
     }
 
     /**
+     * Create theme config.
+     *
+     * @param mixed config The theme config to create.
+     * @return boolean <code>true</code> on success.
+     */
+    public function createThemeConfig($config) {
+        return ZMRuntime::getDatabase()->createModel(TABLE_TEMPLATE_SELECT, $config);
+    }
+
+    /**
+     * Delete theme config.
+     *
+     * @param mixed config The theme config to delete.
+     * @return boolean <code>true</code> on success.
+     */
+    public function deleteThemeConfig($config) {
+        return ZMRuntime::getDatabase()->removeModel(TABLE_TEMPLATE_SELECT, $config);
+    }
+
+    /**
      * Set the active theme id.
      *
      * @param string themeId The theme id.
