@@ -58,6 +58,7 @@ Release 0.9.11
 - add locale specifc folders (example: locale/en_NZ, locale/en) to list of
   folders used to resolve resources
 - change setting 'defaultThemeId' to 'apps.store.themes.default'
+- admin: add manage themes page, incl. support for variation (new SQL patch)
 
 Release 0.9.10
 - restructure store and admin code into separate apps with most of the store
